Added Sample for Router config & View Component (including Unit Test)

--- a/src/app/app.component.pug
+++ b/src/app/app.component.pug
@@ -1,3 +1,10 @@
 h1.something lorem sum 123
-    p#test this is paragraph
-    app-demo
+router-outlet
+ul
+    li
+        a(routerLink='/') home
+    li
+        a(routerLink='/test2') test2
+    li
+        a(routerLink='/test3') test3 with resolver
+app-demo
