--- a/src/app/app.component.pug
+++ b/src/app/app.component.pug
@@ -1,19 +1,22 @@
-h1.something
-    | lorem sum 123
-router-outlet
-ul
-    li
-        a(routerLink="/")
-            | home
-    li
-        a#test2(routerLink="/test2")
-            | test2
-    li
-        a(routerLink="/test3")
-            | test3 with resolver
-    li
-        a(routerLink="/test3", [queryParams]="{paramName: 'something'}")
-            | test3 with resolver + param
+h1.something lorem sum 123
+
 app-demo
 app-demo2(passedVal="this is a passed value")
+
+router-outlet
+    h2 router demo
+    ul
+        li
+            a(routerLink="/")
+                | home
+        li
+            a#test2(routerLink="/test2")
+                | test2
+        li
+            a(routerLink="/test3")
+                | test3 with resolver
+        li
+            a(routerLink="/test3", [queryParams]="{paramName: 'something'}")
+                | test3 with resolver + param
 app-template-form
+app-reactive-form
