Added Demo3Component into Main View

--- a/src/app/app.component.pug
+++ b/src/app/app.component.pug
@@ -2,6 +2,7 @@ h1.something lorem sum 123
 
 app-demo
 app-demo2(passedVal="this is a passed value")
+app-demo3
 
 router-outlet
     h2 router demo
