--- a/src/app/app.component.pug
+++ b/src/app/app.component.pug
@@ -1,8 +1,8 @@
 h1.something lorem sum 123
-
 app-demo
 app-demo2(passedVal="this is a passed value")
 app-demo3
+app-demo4
 
 router-outlet
     h2 router demo
