Added Demo & Test Case for Component Working with a nested directive/component

--- a/src/app/ui-component/cmp/demo3/demo3.component.pug
+++ b/src/app/ui-component/cmp/demo3/demo3.component.pug
@@ -1,1 +1,3 @@
-p(appAttrDir) demo3 works for attribute directive with fixed behaviors
+p(appAttrDir)
+    app-dummy
+    | demo3 works for attribute directive with fixed behaviors
