--- a/src/app/app.component.pug
+++ b/src/app/app.component.pug
@@ -3,6 +3,9 @@ app-demo
 app-demo2(passedVal="this is a passed value")
 app-demo3
 app-demo4
+app-demo5
+    app-dummy
+    | demo for &lt;ng-content&gt; &amp; @ViewChild
 
 router-outlet
     h2 router demo
