solated demo code for Component’s @ViewChild/ViewChildren

--- a/src/app/ui-component/cmp/demo3/demo3.component.pug
+++ b/src/app/ui-component/cmp/demo3/demo3.component.pug
@@ -1,3 +1,4 @@
-p(appAttrDir)
+div(appDummyDir)
+    h1 Demo for @ViewChild/@ViewChildren (directive and component)
     app-dummy
-    | demo3 works for attribute directive with fixed behaviors
+
