--- a/src/app/ui-component/cmp/demo-binding_event_input_output/demo2.component.pug
+++ b/src/app/ui-component/cmp/demo-binding_event_input_output/demo2.component.pug
@@ -1,3 +1,3 @@
 p((click)="onClick()")
-    | demo2 works! {{ passedVal }}
+    | demo2 works! {{ passedVal }} {{ boundProp }}
     span((click)="emitEvt()")
