Clean up Component Files/Class/Selector Namespace

--- a/src/app/app.component.pug
+++ b/src/app/app.component.pug
@@ -1,10 +1,4 @@
-h1.something lorem sum 123
-app-demo2(passedVal="this is a passed value")
-app-demo3
-
-app-demo5
-    app-dummy
-    | demo for &lt;ng-content&gt; &amp; @ViewChild
+h1.something NG 5 Boilerplate
 
 router-outlet
     h2 router demo
@@ -21,5 +15,6 @@ router-outlet
         li
             a(routerLink="/test3", [queryParams]="{paramName: 'something'}")
                 | test3 with resolver + param
+
 app-template-form
 app-reactive-form
